# rust-boilerplate

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md
crates/api/: Cargo.toml
crates/api/src/: docs.rs  handlers.rs  lib.rs  main.rs  routes.rs  templates.rs  validation.rs  websocket.rs
crates/api/src/middleware/: tenant.rs
crates/api/templates/: index.html
crates/core/: Cargo.toml
crates/core/src/: error.rs  lib.rs
crates/core/src/entities/: mod.rs  tenant.rs
crates/infrastructure/: Cargo.toml
crates/infrastructure/src/: lib.rs
crates/infrastructure/src/auth/: google_oauth.rs  jwt.rs  mod.rs
crates/infrastructure/src/database/: mod.rs  mongodb.rs  postgres.rs
crates/infrastructure/src/email/: mailgun.rs  mod.rs  sendgrid.rs
crates/infrastructure/src/payment/: lemon_squeezy.rs  mod.rs  stripe.rs
crates/infrastructure/src/telemetry/: mod.rs
crates/wasm/: Cargo.toml
crates/wasm/src/: lib.rs
frontend/: index.html  package.json  webpack.config.js
frontend/src/: index.js
templates/ci/: github_action.yml
templates/docs/: api_endpoint.md
templates/emails/: password_reset.html  welcome.html
templates/reports/: monthly_summary.html
