[package]
name = "rust-boilerplate"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "crates/api",
    "crates/core",
    "crates/infrastructure",
    "crates/wasm"
]

[workspace.dependencies]
tokio = { version = "1.28", features = ["full"] }
serde= { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
async-trait = "0.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 0
debug = true