[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.3"
actix-cors = "0.6"
actix-web-httpauth = "0.8"
askama = "0.12"
jsonwebtoken = "8.3"
validator = { version = "0.16", features = ["derive"] }
dotenv = "0.15"
env_logger = "0.10"
core = { path = "../core" }
infrastructure = { path = "../infrastructure" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }